--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@material-tailwind/react": "^2.1.4",
     "@tanstack/react-table": "^8.10.7",
     "add": "^2.0.6",
+    "axios": "^1.6.1",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jsdom": "^22.1.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
