--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jsdom": "^22.1.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
+    "puppeteer": "^21.5.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18",
     "react-dom": "^18",
     "shadcn-ui": "^0.4.1",
